# averages

./: README.md  pyproject.toml
averages/: averages.py  config.json  failure.py  main.py  plot.py  processing.py  string_match.py
